// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended filters work correctly for Nutrition: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nutritionLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended filters work correctly for Nutrition: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="stunting"
    value="stunting"
  >
    Stunting
  </option>
  <option
    key="wasting"
    value="wasting"
  >
    Wasting
  </option>
  <option
    key="overweight"
    value="overweight"
  >
    Overweight
  </option>
  <option
    key="inappropriateFeeding"
    value="inappropriateFeeding"
  >
    Inappropriate Feeding
  </option>
  <option
    key="underweight"
    value="underweight"
  >
    Underweight
  </option>
  <option
    key="normal"
    value="normal"
  >
    Normal
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: location filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
    value="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
  >
    Gia Lai
  </option>
  <option
    key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
    value="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
  >
    Điện Biên
  </option>
  <option
    key="eccfe905-0e03-4188-98bc-22f141cccd0e"
    value="eccfe905-0e03-4188-98bc-22f141cccd0e"
  >
    Kon Tum
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="risk"
    value="risk"
  >
    Risk
  </option>
  <option
    key="redAlert"
    value="redAlert"
  >
    Red alert
  </option>
  <option
    key="noRisk"
    value="noRisk"
  >
    No risk
  </option>
</select>
`;

exports[`containers/LogFace extended renders correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":pregnancyLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended renders correctly: logface title 1`] = `
<h2
  id="logface_title"
>
  Log Face - Pregnancy
</h2>
`;

exports[`containers/LogFace extended renders correctly: search div 1`] = `
<input
  className="form-control logface-search"
  id="search"
  name="input"
  onChange={[Function]}
  placeholder="Search ID, Reporter, Patients"
  type="text"
/>
`;

exports[`containers/LogFace extended renders correctly: table td 1`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 2`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 3`] = `
<td
  className="default-width"
>
  Birth Report
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 4`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 5`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 6`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 7`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Child DOB : 13/04/2021-0"
    >
      Child DOB : 13/04/2021
    </li>
    <li
      key="Child Gender : NAM-1"
    >
      Child Gender : NAM
    </li>
    <li
      key="Delivery Location : -2"
    >
      Delivery Location : 
    </li>
    <li
      key="Newborn Symptoms : Jaundice (psysiological)-3"
    >
      Newborn Symptoms : Jaundice (psysiological)
    </li>
    <li
      key="Child Weight : 2.8kg-4"
    >
      Child Weight : 2.8kg
    </li>
    <li
      key="Child Length : 48cm-5"
    >
      Child Length : 48cm
    </li>
    <li
      key="Child Risk : no_risk-6"
    >
      Child Risk : no_risk
    </li>
    <li
      key="Breastfeeding : No breastfeeding within 1 hour-7"
    >
      Breastfeeding : No breastfeeding within 1 hour
    </li>
    <li
      key="Mother Symptoms : Light vaginal bleeding-8"
    >
      Mother Symptoms : Light vaginal bleeding
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 8`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="No Risk"
          risk="no_risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#28a745",
              }
            }
          >
            <div>
              <p>
                No Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 9`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 10`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 11`] = `
<td
  className="default-width"
>
  Delivery Planning
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 12`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 13`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 14`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 15`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : At home-0"
    >
      Planned Delivery Location : At home
    </li>
    <li
      key="Current Symptoms : Vomiting-1"
    >
      Current Symptoms : Vomiting
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 16`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 17`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 18`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 19`] = `
<td
  className="default-width"
>
  Social Determinants
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 20`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 21`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 22`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 23`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : At home-0"
    >
      Planned Delivery Location : At home
    </li>
    <li
      key="Household : Is a poor household-1"
    >
      Household : Is a poor household
    </li>
    <li
      key="Ethnicity : TAY-2"
    >
      Ethnicity : TAY
    </li>
    <li
      key="Toilet : Has toilet-3"
    >
      Toilet : Has toilet
    </li>
    <li
      key="Handwashing : No Handwashing facilities with soap-4"
    >
      Handwashing : No Handwashing facilities with soap
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 24`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 25`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 26`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 27`] = `
<td
  className="default-width"
>
  Home ANC Visit
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 28`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 29`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 30`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 31`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Blood Pressure : 120/80-0"
    >
      Blood Pressure : 120/80
    </li>
    <li
      key="Weight : 70kg-1"
    >
      Weight : 70kg
    </li>
    <li
      key="Current Symptoms : Stomachache,Premature Contraction-2"
    >
      Current Symptoms : Stomachache,Premature Contraction
    </li>
    <li
      key="Supplements : Micronutrients Supplement: Yes-3"
    >
      Supplements : Micronutrients Supplement: Yes
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 32`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 33`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 34`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 35`] = `
<td
  className="default-width"
>
  ANC Visit
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 36`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 37`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 38`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 39`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Blood Pressure : 120/80-0"
    >
      Blood Pressure : 120/80
    </li>
    <li
      key="Weight : 69kg-1"
    >
      Weight : 69kg
    </li>
    <li
      key="Current Symptoms : Premature Contraction-2"
    >
      Current Symptoms : Premature Contraction
    </li>
    <li
      key="Supplements : Micronutrients Supplement: Yes-3"
    >
      Supplements : Micronutrients Supplement: Yes
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: table td 40`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended sms type filter work correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nbcPncLogFace}&csv=true"
  id="export-button"
>
  Export data
</a>
`;
